Changed mobile centering issue
Experience section was not centered on mobile.

--- a/styles.css
+++ b/styles.css
@@ -296,7 +296,7 @@ main {
   background-image: url("https://images.unsplash.com/photo-1756758005190-92941d91b8b2?q=80&w=1170&auto=format&fit=crop");
   text-align: center;
   justify-content:center;
-  padding: 50px;
+  padding: 50px 20px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -307,7 +307,7 @@ main {
 
 .exp-box {
   display: grid;
-  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: 1fr;
   place-items: center;
   gap: 10px;
   padding: 40px;
